--- a/package.json
+++ b/package.json
@@ -1,20 +1,15 @@
 {
-  "name": "tachat",
-  "version": "0.0.1",
-  "description": "chat for ta's. so we dont have to use email.",
-  "main": "index.js",
+  "name": "chat",
+  "version": "0.0.0",
+  "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node ./bin/www"
   },
-  "author": "kms",
-  "license": "MIT",
   "dependencies": {
     "cors": "^2.8.5",
-    "date-and-time": "^3.0.3",
+    "easy-json-database": "^1.5.1",
     "express": "^4.18.2",
-    "express-ws": "^5.0.2",
-    "path": "^0.12.7",
-    "sanitize-html": "^2.11.0",
-    "ws": "^8.14.2"
+    "ip": "^1.1.8",
+    "socket.io": "^4.7.2"
   }
 }
